# Excellence

./: .gitignore  00_Architectuur_Overzicht.md  01_ESP32_Firmware.md  02_NodeRED_HomeAssistant.md  03_MQTT_API_Specificatie.md  CLAUDE.md  CMakeLists.txt  PlanVanAanpakProjectExcellence.md  README.md  platformio.ini  secrets_template.ini
components/cfg_mqtt/: CMakeLists.txt  cfg_mqtt.c
components/cfg_mqtt/include/: cfg_mqtt.h
components/config_store/: CMakeLists.txt  config_store.c
components/config_store/include/: config_store.h
components/input_ctrl/: CMakeLists.txt  input_ctrl.c
components/input_ctrl/include/: input_ctrl.h
components/mesh_link/: CMakeLists.txt  mesh_link.c
components/mesh_link/backends/: backend_espmesh.c  backend_mailbox.c
components/mesh_link/include/: mesh_link.h
components/mqtt_link/: CMakeLists.txt  mqtt_link.c
components/mqtt_link/include/: mqtt_link.h
components/parser/: CMakeLists.txt  parser.c
components/parser/include/: parser.h
components/pwm_ctrl/: CMakeLists.txt  pwm_ctrl.c
components/pwm_ctrl/include/: pwm_ctrl.h
components/relay_ctrl/: CMakeLists.txt  relay_ctrl.c
components/relay_ctrl/include/: relay_ctrl.h
components/router/: CMakeLists.txt  router.c
components/router/include/: router.h
components/wifi_link/: CMakeLists.txt  wifi_link.c
components/wifi_link/include/: wifi_link.h
partitions/: esp32-2mb-noota.csv
src/: CMakeLists.txt  main.c
